--- a/web/pib/css/default.css
+++ b/web/pib/css/default.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -22,6 +24,7 @@ time, mark, audio, video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -30,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    font-family: 'Roboto', sans-serif;
 }
 ol, ul {
     list-style: none;
@@ -42,3 +46,198 @@ table {
     border-spacing: 0;
 }
 
+html,
+body {
+    margin:0;
+    padding:0;
+    height:100%;
+}
+#wrapper {
+    min-height:100%;
+    position:relative;
+}
+
+/* ########## HEADER ############ */
+
+header a{
+    text-decoration: none;
+}
+#header-top{
+    height: 30px;
+    background-color: #331f00;
+}
+#header-bottom{
+    height: 300px;
+    background-color: #f8b323;
+}
+#header-bottom-small{
+    height: 80px;
+    background-color: #f8b323;
+}
+#header-bottom .content {
+    margin: auto;
+    height: 300px;
+    background: url("/web/pib/img/static/background-bottom.png") no-repeat center;
+}
+#header-bottom-small .content {
+    margin: auto;
+    height: 80px;
+    background: url("/web/pib/img/static/background-bottom.png") center no-repeat;
+    background-size: 80px 80px;
+}
+
+#header-bottom .content h1 {
+    font-size: 60px;
+    font-weight: bold;
+    color: #2a1a00;
+    text-align: center;
+}
+#header-bottom-small .content h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: #2a1a00;
+    text-align: center;
+    line-height: 80px;
+}
+
+/* ########## MAIN ############ */
+
+#main{
+    padding-bottom: 40px;
+    max-width: 900px;
+    margin: auto;
+    color: #2a1a00;
+}
+.main-index{
+    padding-bottom: 40px;
+    max-width: 100%!important;
+}
+#main .content{
+    padding: 10px;
+}
+#main .content p{
+    text-align: justify;
+    margin-bottom: 15px;
+}
+
+/* ########## INDEX HOME ############ */
+
+#video-home{
+    background: url("/web/pib/img/static/video-background.png") repeat-x;
+    padding: 40px 0 0 0;
+}
+#video-home-video{
+    margin: auto;
+    border: 5px solid white;
+    border-radius: 4px;
+}
+#video-explication{
+    margin: 25px auto 30px auto;
+    padding: 10px;
+    border-top: 1px solid #2a1a00;
+    border-bottom: 1px solid #2a1a00;
+    max-width: 640px;
+    text-align: justify;
+}
+a.button-home{
+    text-decoration: none;
+    cursor: pointer;
+    width: 225px;
+    background-color: #f8b323;
+    padding: 12px;
+    margin: 20px auto 0 auto;
+    display: block;
+    font-size: 25px;
+    text-align: center;
+    border-bottom: 3px solid #d0961c;
+    color: #2a1a00;
+    border-radius: 2px;
+}
+
+/* ########## BODY ############ */
+
+h1.h1-title{
+    font-size: 40px;
+    text-align: center;
+    padding: 20px;
+}
+.video-block{
+    max-width: 700px;
+    margin: auto auto 50px auto;
+}
+.video-block .h2-title-video{
+    font-size: 25px;
+    padding: 5px 0;
+}
+.video-block .h2-title-video a{
+    color: #2a1a00;
+    text-decoration: none;
+}
+.stars{
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.stars-input{
+    width:190px;height:15px
+}
+.stars-value{
+    float:left;
+    height:36px;
+    background: url("/web/pib/img/static/star-filled.png") repeat-x;
+}
+.stars-input-content{
+    float:left;
+    width:190px;
+    margin-right:5px;
+    background: url("/web/pib/img/static/star-o.png") repeat-x;
+    cursor:pointer
+}
+.stars-input-title{
+    display:inline-block;
+    position:relative;
+    top:2px;
+    left:10px
+}
+
+/* ########## FOOTER ############ */
+
+footer{
+    padding: 0 10px 5px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    width:100%;
+    height: 20px;
+    position:absolute;
+    bottom:0;
+    left:0;
+}
+footer a{
+    color: #2a1a00;
+    display: inline-block;
+}
+footer #footer-left{
+    font-size: 17px;
+    padding-bottom: 6px;
+}
+footer #footer-left a{
+    padding-right: 10px;
+    padding-bottom: 5px;
+}
+footer #footer-right{
+    width: 123px;
+    text-align: right;
+    font-size: 40px;
+}
+footer #footer-right a{
+    text-decoration: none;
+}
+
+.clear{
+    clear: both;
+}
